Author: Beatriz Ovejero Date: Sun March 05 2017

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="QuestionHint">Your answer</string>
     <string name="Reset">Reset</string>
     <string name="Submit">Submit</string>
-
+    <string name="web">Your Bonus</string>
 
 </resources>
