Date: Sun March 05 2017 Final version before Mentor checking

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,5 @@
     <string name="QuestionHint">Your answer</string>
     <string name="Reset">Reset</string>
     <string name="Submit">Submit</string>
-    <string name="web">Your Bonus</string>
-
+    <string name="Bonus">Enjoy Madrid!</string>
 </resources>
