--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,5 @@
     <string name="Reset">Reset</string>
     <string name="Submit">Submit</string>
     <string name="Bonus">Enjoy Madrid!</string>
-
+    <string name="Mamelukes">The Charge of the Mamelukes</string>
 </resources>
